# userDataCollector

./: CMakeLists.txt  LICENSE  README.md  input_test_file1.txt
client/: CMakeLists.txt
client/include/: client_manager.h
client/source/: ClientManager.cpp  client_manager.cpp  main.cpp
lib/: CMakeLists.txt
lib/include/: AES128_cryptor.h  PGP_cryptor.h  RSA_cryptor.h  SHA256_hash.h  cryptor.h  data.h  double_cryptor.h  file_data.h  hash.h  hash_based_signature.h  json_data.h  log.h  openssl_cryptors.h  signature.h  types.h  utils.h
lib/source/: AES128_cryptor.cpp  RSA_cryptor.cpp  SHA256_hash.cpp  double_cryptor.cpp  openssl_cryptors.cpp
server/: CMakeLists.txt
server/include/: server_manager.h
server/source/: main.cpp  serverManager.cpp  server_manager.cpp
tests/: CMakeLists.txt
tests/perf_tests/: CMakeLists.txt  analyze_bench.py  run_perf_tests.sh
tests/perf_tests/include/: generate_helper.h
tests/perf_tests/source/: cryptors_bench.cpp
tests/unit_tests/: CMakeLists.txt  analyze_measure.py  generate_random_files.sh  measure_gpg.sh  run_measure.sh
tests/unit_tests/include/: file_helper.h
tests/unit_tests/source/: cryptor_tests.cpp  data_tests.cpp  file_data_tests.cpp  main.cpp  measure.cpp
